# treecat

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/treecat-cli/: Cargo.toml
crates/treecat-cli/src/: main.rs
crates/treecat-cli/tests/: integration.rs
crates/treecat-core/: Cargo.toml
crates/treecat-core/src/: classify.rs  clipboard.rs  config.rs  filter.rs  fswalk.rs  lang.rs  lib.rs  render.rs  run.rs
docs/: cli-reference.md  config.md  output-contract.md
