[package]
name = "treecat-cli"
version = "1.0.0"
edition = "2021"
authors = ["treecat contributors"]
license = "MIT"
description = "CLI for rendering a directory tree and selected file contents as deterministic text."
repository = "https://github.com/jhklarcher/treecat"
homepage = "https://github.com/jhklarcher/treecat"
documentation = "https://github.com/jhklarcher/treecat/tree/main/docs"
readme = "../../README.md"
keywords = ["treecat", "tree", "cli", "files"]
categories = ["command-line-utilities", "filesystem"]

[[bin]]
name = "treecat"
path = "src/main.rs"

[dependencies]
treecat-core = { version = "1.0.0", path = "../treecat-core" }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3.10"
